--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -69,7 +69,7 @@
             <div class="label">声音</div>
             <div class="content">
               <select v-if="voices.length" v-model="currVoicesIndex">
-                <option v-for="(item,index) in voices" :value="index">
+                <option v-for="item in voices" :value="$index">
                   {{item.name}}
                 </option>
               </select>
@@ -103,7 +103,7 @@
             </div>
           </li>
           <li class="btn-group">
-            <button @click="reset">重置所有设置</button>
+            <button @click="restAll">重置所有设置</button>
           </li>
         </ul>
       </div>
@@ -125,7 +125,7 @@
                 v-model="currModesIndex"
                 class="mode-selects"
               >
-                <option v-for="(item,index) in modes" :value="index">
+                <option v-for="item in modes" :value="$index">
                   {{item.name}}
                 </option>
               </select>
@@ -151,7 +151,10 @@
         </ul>
       </div>
     </div>
-    <script src="./lib/vue@2.6.14.js"></script>
+    <script src="../../lib/vue@v1.0.28-csp.js"></script>
+    <!-- hrome 扩展的运行环境有一些特殊要求，称为 Content Security Policy (CSP)，使得通常的 vue 不能被正常使用。
+      需要使用csp版本的vue，vue2 vue3还没能找到这个版本...凑合着用吧
+    vue 1 的文档参考： https://www.w3cschool.cn/vuejs/i5qt1jsa.html-->
     <script src="./popup.js"></script>
   </body>
 </html>
